# python-shamsi

./: README.md  debug_calc.py  manual_test.py  pyproject.toml
.agent/workflows/: publish_package.md
.github/workflows/: publish.yml
src/sammsi_calendar/: __init__.py  julian_day.py
tests/: test_julian_day.py
