[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-shamsi"
version = "1.0.0"
description = "A Python library for Julian Day and Solar Date conversions."
readme = "README.md"
authors = [
  { name = "Muhammad Sajid", email = "dev.sajid09@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/rexiop/python-shamsi"
